
= rufus-tokyo CHANGELOG.txt

== rufus-tokyo - 0.1.3    not yet released

- todo : implemented Cabinet#copy


== rufus-tokyo - 0.1.2    released 2009/01/23

- todo : implemented Cabinet#keys and #values


== rufus-tokyo - 0.1.1    released 2009/01/23

- bug  : fixed dependency, it's ffi not ruby-ffi
- todo : implemented Cabinet#clear


== rufus-tokyo - 0.1.0    released 2009/01/23

- initial release
